# surrealdartb

./: .gitignore  CHANGELOG.md  Cargo.toml.backup  DIRECT_FFI_MIGRATION.md  EXPORT_IMPORT_IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_GUIDE.md  README.md  ROCKSDB_LIMITATIONS.md  VALIDATION_FINDINGS.md  build.yaml  dart_test.yaml  pubspec.yaml  quick_validation_test.dart  simple_validation.dart  status.md  test_create_debug.dart  test_query_debug.dart  test_scenarios_runner.dart
.claude/: settings.local.json
agent-os/: 11-07-2025-docs.md  config.yml
docs/: 01-getting-started.md  02-basic-operations.md  03-schema-definition.md  04-code-generator.md  05-vector-operations.md  06-best-practices.md  README.md
example/: README.md  build.yaml  cli_example.dart  pubspec.yaml  surrealdartb_example.dart
hook/: build.dart
lib/: surrealdartb.dart
rust/: Cargo.toml  rust-toolchain.toml  test_direct.rs  test_vector.rs  test_vector_storage.rs
rust/src/: auth.rs  connection_registry.rs  database.rs  error.rs  lib.rs  live_query.rs  query.rs  query.rs.bak  recovery.rs  runtime.rs
test/: README.md  async_behavior_test.dart  authentication_test.dart  comprehensive_crud_error_test.dart  database_direct_ffi_test.dart  database_integration_test.dart  database_reconnect_test.dart  ddl_generator_test.dart  deserialization_validation_test.dart  example_scenarios_test.dart  function_execution_test.dart  migration_execution_test.dart  migration_safety_test.dart  parameter_management_test.dart  rollback_test.dart  schema_diff_test.dart  schema_introspection_test.dart  surrealdartb_test.dart  transaction_test.dart  vector_database_integration_test.dart  vector_function_verification_test.dart  vector_index_schema_integration_test.dart  vector_index_type_system_test.dart  vector_integration_e2e_test.dart  vector_strategic_gaps_test.dart  vector_value_test.dart
test_updates_report/: FINAL_REPORT.md  SUMMARY.md  TEST_FILES_LIST.md  (+1 more)
(+326 files in other folders)
