[package]
name = "surrealdartb_bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
surrealdb = { version = "2.0", default-features = false, features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
