[package]
name = "surrealdartb_bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
surrealdb = { version = "2.0", default-features = false, features = ["kv-mem", "kv-rocksdb"] }
surrealdb-core = "2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
